--- a/src/Code-First from Database/WebAppCRUD/Site.Master
+++ b/src/Code-First from Database/WebAppCRUD/Site.Master
@@ -46,13 +46,13 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" runat="server" href="~/">Application name</a>
+                    <a class="navbar-brand" runat="server" href="~/">WestWind Code First</a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li><a runat="server" href="~/">Home</a></li>
-                        <li><a runat="server" href="~/About">About</a></li>
-                        <li><a runat="server" href="~/Contact">Contact</a></li>
+                        <li><a runat="server" href="~/Admin/ViewCategories.aspx">View Categories</a></li>
+                        <li><a runat="server" href="~/Admin/ViewProducts.aspx">View Products</a></li>
+                        <li><a runat="server" href="~/Admin/ViewSuppliers.aspx">View Suppliers</a></li>
                     </ul>
                 </div>
             </div>
