--- a/src/Code-First from Database/WebAppCRUD/Site.Master
+++ b/src/Code-First from Database/WebAppCRUD/Site.Master
@@ -50,9 +50,9 @@
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li><a runat="server" href="~/Admin/ViewCategories.aspx">View Categories</a></li>
-                        <li><a runat="server" href="~/Admin/ViewProducts.aspx">View Products</a></li>
-                        <li><a runat="server" href="~/Admin/ViewSuppliers.aspx">View Suppliers</a></li>
+                        <li><a runat="server" href="~/Admin/ViewCategories.aspx">Categories</a></li>
+                        <li><a runat="server" href="~/Admin/ViewProducts.aspx">Products</a></li>
+                        <li><a runat="server" href="~/Admin/ViewSuppliers.aspx">Suppliers</a></li>
                     </ul>
                 </div>
             </div>
