--- a/src/Code-First from Database/WebAppCRUD/Site.Master
+++ b/src/Code-First from Database/WebAppCRUD/Site.Master
@@ -53,6 +53,7 @@
                         <li><a runat="server" href="~/Admin/ViewCategories.aspx">Categories</a></li>
                         <li><a runat="server" href="~/Admin/ViewProducts.aspx">Products</a></li>
                         <li><a runat="server" href="~/Admin/ViewSuppliers.aspx">Suppliers</a></li>
+                        <li><a runat="server" href="~/Admin/ViewAddresses.aspx">Addresses</a></li>
                     </ul>
                 </div>
             </div>
